# axi4lite-wrapper-generator

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml
checks/: semantic.py
generator/: codegen.py
generator/templates/: custom_rtl_axi.vhd.j2  regmap.md.j2
ir/: model.py
output/: axi_lite_if.vhd  logic_gate_controller_axi.vhd
parser/: json_validator.py
templates/: axi_lite_if.vhd.j2
tests/: pwm_controller.vhd  pwm_regmap.json  test_pipeline.py
tests/output/: axi_lite_if.vhd  pwm_controller_axi.vhd
