[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "axi4lite-wrapper-generator"
version = "0.1.0"
description = "Automated AXI4-Lite VHDL wrapper generator"
requires-python = ">=3.10"
dependencies = ["jinja2>=3.0"]

[project.scripts]
axi-wrapper-gen = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["checks", "generator", "ir", "parser"]

[tool.setuptools.package-data]
generator = ["templates/*.j2"]
